# advent-of-code

./: .gitignore  README.md
2024/: CMakeLists.txt
2024/src/lib/day_01/: CMakeLists.txt  README.md
2024/src/lib/day_01/include/day_01/: common.hpp
2024/src/lib/day_01/src/: common.cpp  main.cpp  part-02.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_02/: CMakeLists.txt  README.md
2024/src/lib/day_02/include/day_02/: common.hpp
2024/src/lib/day_02/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_03/: CMakeLists.txt  README.md
2024/src/lib/day_03/include/day_03/: common.hpp
2024/src/lib/day_03/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_04/: CMakeLists.txt
2024/src/lib/day_04/include/day_04/: common.hpp
2024/src/lib/day_04/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_05/: CMakeLists.txt
2024/src/lib/day_05/include/day_05/: common.hpp
2024/src/lib/day_05/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_06/: CMakeLists.txt
2024/src/lib/day_06/include/day_06/: common.hpp
2024/src/lib/day_06/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/day_07/: CMakeLists.txt
2024/src/lib/day_07/include/day_07/: common.hpp
2024/src/lib/day_07/src/: common.cpp  part_01.cpp  part_02.cpp
2024/src/lib/example/: CMakeLists.txt
2024/src/lib/example/include/example/: example.hpp
2024/src/lib/example/src/: example.cpp
2024/src/tests/: CMakeLists.txt
2024/src/tests/day_01/: CMakeLists.txt  day_01.cpp
2024/src/tests/day_02/: CMakeLists.txt  day_02.cpp
2024/src/tests/day_03/: CMakeLists.txt  day_03.cpp
2024/src/tests/day_04/: CMakeLists.txt  day_04.cpp
2024/src/tests/day_05/: CMakeLists.txt  day_05.cpp
2024/src/tests/day_06/: CMakeLists.txt  day_06.cpp
2024/src/tests/day_07/: CMakeLists.txt  day_07.cpp
2024/src/tests/unit/lib/: day_01.cpp  example.cpp  foo.cpp
2024/utils/: generate_source.js
